# test_chat_app

./: CMakeLists.txt  chatCore.cpp  chatCore.h  chatWidget.cpp  chatWidget.h  main.cpp
